@@ -34,7 +34,7 @@ class HearingsByHearingTypeReportTest {
             TribunalOffice.MANCHESTER.getOfficeName(), DATE_FROM, DATE_TO);
 
     @BeforeEach
-    public void setup() {
+    void setup() {
         submitEvents.clear();
         caseDataBuilder = new HearingsByHearingTypeCaseDataBuilder();
         reportDataSource = mock(HearingsByHearingTypeReportDataSource.class);
@@ -106,7 +106,7 @@ class HearingsByHearingTypeReportTest {
         submitEvents.addAll(caseDataBuilder.createSubmitEvents(HEARING_STATUS_HEARD, "multiRef", "subMulti"));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportSummary> reportSummaryList = reportData.getReportSummaryList();
-        HearingsByHearingTypeReportSummary reportSummary = reportSummaryList.get(0);
+        HearingsByHearingTypeReportSummary reportSummary = reportSummaryList.getFirst();
         assertEquals("1", reportSummary.getFields().getTotal());
         assertEquals("1", reportSummary.getFields().getHearingCount());
         assertEquals("0", reportSummary.getFields().getCmCount());
@@ -123,7 +123,7 @@ class HearingsByHearingTypeReportTest {
         submitEvents.addAll(caseDataBuilder.createSubmitEvents(HEARING_STATUS_HEARD, "multiRef", "subMulti"));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportSummary2Hdr> reportSummary2HdrList = reportData.getReportSummary2HdrList();
-        HearingsByHearingTypeReportSummary2Hdr reportSummary2Hdr = reportSummary2HdrList.get(0);
+        HearingsByHearingTypeReportSummary2Hdr reportSummary2Hdr = reportSummary2HdrList.getFirst();
         assertEquals("1", reportSummary2Hdr.getFields().getTotal());
         assertEquals("0", reportSummary2Hdr.getFields().getHearingCount());
         assertEquals("1", reportSummary2Hdr.getFields().getCmCount());
@@ -141,7 +141,7 @@ class HearingsByHearingTypeReportTest {
                 HEARING_STATUS_HEARD, "multiRef", "subMulti"));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportSummary2> reportSummary2List = reportData.getReportSummary2List();
-        HearingsByHearingTypeReportSummary2 reportSummary2 = reportSummary2List.get(0);
+        HearingsByHearingTypeReportSummary2 reportSummary2 = reportSummary2List.getFirst();
         assertEquals("1", reportSummary2.getFields().getTotal());
         assertEquals("1", reportSummary2.getFields().getHearingCount());
         assertEquals("0", reportSummary2.getFields().getCmCount());
@@ -157,12 +157,12 @@ class HearingsByHearingTypeReportTest {
     void testIfDatesAreInOrder() {
         submitEvents.clear();
         submitEvents.addAll(caseDataBuilder.createSubmitEvents(HEARING_STATUS_HEARD, "", ""));
-        submitEvents.get(0).getCaseData().getHearingCollection().get(0).getValue().getHearingDateCollection()
-                .get(0).getValue().setListedDate("2022-01-02T00:00:00.000");
-        submitEvents.get(1).getCaseData().getHearingCollection().get(0).getValue().getHearingDateCollection()
-                .get(0).getValue().setListedDate("2022-01-01T00:00:00.000");
-        submitEvents.get(2).getCaseData().getHearingCollection().get(0).getValue().getHearingDateCollection()
-                .get(0).getValue().setListedDate("2022-01-03T00:00:00.000");
+        submitEvents.get(0).getCaseData().getHearingCollection().getFirst().getValue().getHearingDateCollection()
+                .getFirst().getValue().setListedDate("2022-01-02T00:00:00.000");
+        submitEvents.get(1).getCaseData().getHearingCollection().getFirst().getValue().getHearingDateCollection()
+                .getFirst().getValue().setListedDate("2022-01-01T00:00:00.000");
+        submitEvents.get(2).getCaseData().getHearingCollection().getFirst().getValue().getHearingDateCollection()
+                .getFirst().getValue().setListedDate("2022-01-03T00:00:00.000");
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportSummary> reportSummaryList = reportData.getReportSummaryList();
         assertEquals("2022-01-01", reportSummaryList.get(0).getFields().getDate());
@@ -189,7 +189,7 @@ class HearingsByHearingTypeReportTest {
         submitEvents.addAll(caseDataBuilder.createSubmitEvents(HEARING_STATUS_HEARD, "multiRef", "subMulti"));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportDetail> reportDetailList = reportData.getReportDetails();
-        HearingsByHearingTypeReportDetail reportDetail = reportDetailList.get(0);
+        HearingsByHearingTypeReportDetail reportDetail = reportDetailList.getFirst();
         assertEquals("111", reportDetail.getCaseReference());
         assertEquals("Y", reportDetail.getLead());
         assertEquals("330", reportDetail.getDuration());
@@ -206,7 +206,7 @@ class HearingsByHearingTypeReportTest {
         submitEvents.addAll(caseDataBuilder.createSubmitEvents(HEARING_STATUS_HEARD, null, null));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
         List<HearingsByHearingTypeReportDetail> reportDetailList = reportData.getReportDetails();
-        HearingsByHearingTypeReportDetail reportDetail = reportDetailList.get(0);
+        HearingsByHearingTypeReportDetail reportDetail = reportDetailList.getFirst();
         assertEquals("0 -  Not Allocated, 0 -  Not Allocated", reportDetail.getMultiSub());
     }
 
@@ -247,7 +247,7 @@ class HearingsByHearingTypeReportTest {
         submitEvents.clear();
         submitEvents.add(caseDataBuilder.createSubmitEventNullTime(time));
         HearingsByHearingTypeReportData reportData = hearingsByHearingTypeReport.generateReport(REPORT_PARAMS);
-        HearingsByHearingTypeReportDetail reportDetail = reportData.getReportDetails().get(0);
+        HearingsByHearingTypeReportDetail reportDetail = reportData.getReportDetails().getFirst();
         assertEquals(result, reportDetail.getDuration());
     }
 }
